--- a/ebbinghaus-curve.html
+++ b/ebbinghaus-curve.html
@@ -84,9 +84,9 @@
 
         .control-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin-bottom: 20px;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 12px 15px;
+            margin-bottom: 12px;
         }
 
         .control-group {
@@ -95,18 +95,18 @@
         }
 
         label {
-            font-size: 14px;
+            font-size: 12px;
             font-weight: 600;
             color: #495057;
-            margin-bottom: 8px;
+            margin-bottom: 5px;
         }
 
         input, select {
-            padding: 10px 12px;
+            padding: 7px 10px;
             border: 2px solid #dee2e6;
-            border-radius: 8px;
+            border-radius: 6px;
             background: white;
-            font-size: 14px;
+            font-size: 13px;
             font-family: inherit;
             transition: border-color 0.3s;
         }
@@ -114,6 +114,12 @@
         input:focus, select:focus {
             outline: none;
             border-color: #4a90e2;
+        }
+
+        input:disabled {
+            background: #f8f9fa;
+            color: #adb5bd;
+            cursor: not-allowed;
         }
 
         .theme-buttons {
@@ -162,29 +168,40 @@
         }
 
         .recall-section {
-            margin-top: 15px;
-            padding-top: 15px;
+            margin-top: 10px;
+            padding-top: 10px;
             border-top: 2px solid #e9ecef;
         }
 
-        .recall-section label {
-            font-size: 13px;
-            margin-bottom: 8px;
+        .recall-section > label {
+            font-size: 12px;
+            margin-bottom: 4px;
+            display: block;
         }
 
         .recall-section p {
-            font-size: 11px;
+            font-size: 10px;
             color: #6c757d;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
+            line-height: 1.3;
         }
 
-        .recall-section .control-grid {
-            gap: 12px;
+        .recall-grid {
+            display: flex;
+            gap: 10px;
+            align-items: flex-start;
         }
 
-        .recall-section input {
-            padding: 8px 10px;
-            font-size: 13px;
+        .recall-grid .control-group {
+            flex: 1;
+        }
+
+        .recall-grid label {
+            font-size: 11px;
+        }
+
+        .recall-grid input {
+            width: 100%;
         }
 
         @media (max-width: 768px) {
@@ -232,21 +249,21 @@
                 </div>
             </div>
 
-            <div class="control-group recall-section">
+            <div class="recall-section">
                 <label>Spaced Repetition (Recall Days)</label>
-                <p>Enter days when you review the material (leave empty for no review). Reviews strengthen memory retention.</p>
-                <div class="control-grid">
+                <p>Enter review days sequentially. Each review must be later than the previous one.</p>
+                <div class="recall-grid">
                     <div class="control-group">
-                        <label for="recall1">First Review (day)</label>
-                        <input type="number" id="recall1" min="0" max="30" placeholder="No review">
+                        <label for="recall1">1st Review</label>
+                        <input type="number" id="recall1" min="0" max="30" placeholder="Day">
                     </div>
                     <div class="control-group">
-                        <label for="recall2">Second Review (day)</label>
-                        <input type="number" id="recall2" min="0" max="30" placeholder="No review">
+                        <label for="recall2">2nd Review</label>
+                        <input type="number" id="recall2" min="0" max="30" placeholder="Day" disabled>
                     </div>
                     <div class="control-group">
-                        <label for="recall3">Third Review (day)</label>
-                        <input type="number" id="recall3" min="0" max="30" placeholder="No review">
+                        <label for="recall3">3rd Review</label>
+                        <input type="number" id="recall3" min="0" max="30" placeholder="Day" disabled>
                     </div>
                 </div>
             </div>
@@ -631,25 +648,67 @@
             link.click();
         });
 
-        // Update recall days from inputs
+        // Update recall days from inputs with validation
         function updateRecallDays() {
             recallDays = [];
 
-            const recall1 = parseFloat(document.getElementById('recall1').value);
-            const recall2 = parseFloat(document.getElementById('recall2').value);
-            const recall3 = parseFloat(document.getElementById('recall3').value);
+            const recall1Input = document.getElementById('recall1');
+            const recall2Input = document.getElementById('recall2');
+            const recall3Input = document.getElementById('recall3');
 
-            if (!isNaN(recall1) && recall1 >= 0) recallDays.push(recall1);
-            if (!isNaN(recall2) && recall2 >= 0) recallDays.push(recall2);
-            if (!isNaN(recall3) && recall3 >= 0) recallDays.push(recall3);
+            const recall1 = parseFloat(recall1Input.value);
+            const recall2 = parseFloat(recall2Input.value);
+            const recall3 = parseFloat(recall3Input.value);
+
+            // Enable/disable second review based on first review
+            if (!isNaN(recall1) && recall1 >= 0) {
+                recallDays.push(recall1);
+                recall2Input.disabled = false;
+                recall2Input.min = recall1 + 1;
+            } else {
+                recall2Input.disabled = true;
+                recall2Input.value = '';
+                recall3Input.disabled = true;
+                recall3Input.value = '';
+            }
+
+            // Enable/disable third review based on second review
+            if (!isNaN(recall2) && recall2 > recall1) {
+                recallDays.push(recall2);
+                recall3Input.disabled = false;
+                recall3Input.min = recall2 + 1;
+            } else {
+                recall3Input.disabled = true;
+                recall3Input.value = '';
+            }
+
+            // Add third review if valid
+            if (!isNaN(recall3) && recall3 > recall2) {
+                recallDays.push(recall3);
+            }
 
             drawChart();
         }
 
+        // Validate input on change
+        function validateRecallInput(input, minValue) {
+            const value = parseFloat(input.value);
+            if (!isNaN(value) && !isNaN(minValue) && value <= minValue) {
+                input.value = minValue + 1;
+                updateRecallDays();
+            }
+        }
+
         // Recall day inputs
         document.getElementById('recall1').addEventListener('input', updateRecallDays);
-        document.getElementById('recall2').addEventListener('input', updateRecallDays);
-        document.getElementById('recall3').addEventListener('input', updateRecallDays);
+        document.getElementById('recall2').addEventListener('input', () => {
+            validateRecallInput(document.getElementById('recall2'), parseFloat(document.getElementById('recall1').value));
+            updateRecallDays();
+        });
+        document.getElementById('recall3').addEventListener('input', () => {
+            validateRecallInput(document.getElementById('recall3'), parseFloat(document.getElementById('recall2').value));
+            updateRecallDays();
+        });
 
         // Initial draw
         drawChart();
